# freertos-blink

./: .gitmodules
blink/: CMakeLists.txt  main.c
